--- a/src/main/resources/static/styles/style.css
+++ b/src/main/resources/static/styles/style.css
@@ -424,6 +424,6 @@ a, h1, h2, h3, h4, h5, h6, .dropdown-content li>a, .dropdown-content li>span {co
 .btn, .btn-large, .navbtn-hover {background-color: #ec407a;}
 .btn:focus, .btn-large:focus, .btn-floating:focus {background-color: #ec407a; opacity: 0.7;}
 .btn:hover, .btn-large:hover,span.badge.new,.sidenav span.badge.new, .collapsible span.badge.new {background-color: #444444;}
-body, footer.page-footer {background-color: #444444;}
+body, footer.page-footer {background-color: #d1d1d1;}
 footer.page-footer {margin-top: 20px;}
 main {background-color: white;}
