--- a/src/main/resources/static/styles/style.css
+++ b/src/main/resources/static/styles/style.css
@@ -420,7 +420,7 @@ pre, code.hljs, code[class*="language-"], pre[class*="language-"] {
 }
 
 /**** FEEL FREE TO MODIFY THESE PROPETIES ****/
-a, h1, h2, h3, h4, h5, h6, .dropdown-content li>a, .dropdown-content li>span {color: #039be5;}
+a, h1, h2, h3, h4, h5, h6, .dropdown-content li>a, .dropdown-content li>span {color: #3f51b5;}
 .btn, .btn-large, .navbtn-hover {background-color: #ec407a;}
 .btn:focus, .btn-large:focus, .btn-floating:focus {background-color: #ec407a; opacity: 0.7;}
 .btn:hover, .btn-large:hover,span.badge.new,.sidenav span.badge.new, .collapsible span.badge.new {background-color: #444444;}
