--- a/src/main/resources/templates/base.vm
+++ b/src/main/resources/templates/base.vm
@@ -49,7 +49,7 @@
 		<div class="scoold-wrapper">
 			<header>
 				<div class="${navbarFixedClass}">
-					<nav class="indigo">
+					<nav class="blue-grey">
 						<div class="nav-wrapper container">
 							<a href="#" data-target="mobile-drawer" class="sidenav-trigger"><i class="fa fa-bars fa-2x"></i></a>
 
