--- a/src/main/resources/templates/base.vm
+++ b/src/main/resources/templates/base.vm
@@ -288,7 +288,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="footer-copyright">
+				<!--div class="footer-copyright">
 					<div class="container">
 						<div class="row mbn">
 							<div class="col s12 sTextCenter">
@@ -298,7 +298,7 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div-->
 			</footer>
 		</div>
 
